2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b114

 * Update: horde/Browser.php from the Horde Project.

 * Update: Mail/htmlMimeMail class from Richard Heyes.

 * Update: Mail/RFC822.php class from PEAR

 * Update: Mail/mimePart.php class from PEAR

 * Update: HTML_Safe/Safe.php from PEAR (in commit 17324)
		   Note: THis fixes a DEBIAN License Issue

 * Update: XML_HTMLSax3 from PEAR
		   Note: THis fixes a DEBIAN License Issue

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b113

 * Change: Wording and code style.

 * Fix: Correct translation domain.

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b112

 * Change: Better ID Naming for multiInput fields in gInput()

 * Change: Set ID = Name if not given in gButton()

2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b111

 * Change: Wording and code style.

 * Fix: Correct translation domain.

2007-10-16 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b110

 * Change: Removed some white background in treefolder images.

 * Fix: fitToWindow was still not working 100%.

 * Fix: Little HTML fix.

2007-10-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b109

 * Fix: Subalbum-tree did not work when subalbum name started with a number.

 * Change: Jenskin and Blackskin nicifies.

2007-09-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b108

 * Fix: Download icon in thumbsview was missing.

 Thanks to John Schwaller.

2007-09-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b107

 * Fix: Url to photoaccess.

 Thanks to John Schwaller.

2007-09-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b106

 * Change: Black Skin changes.

2007-09-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b105

 * Fix: Removed unnice whitespace in image frames.

 * Fix: unnice wrap in "jumpTo"
 
 Thans to John Schwaller.

2007-09-05 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b104

 * Fix: fitToWindow was broken.

 Thanks to John Schwaller.

2007-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b103

 * Change: CSS consolidation for no-skin and jenskin.
