@@ -1,3 +1,13 @@
+2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b115
+
+ * CHANGE: Renamed all NetPBM etc. to Netpbm
+
+ * CHANGE: Lowered all functionnames starting with NeTpBm etc. to netpbm
+
+ * New: Function getJheadVersion()
+
+ * Change: Show warning if jhead older than 2.7
+
 2007-12-29 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b114
 
  * Update: horde/Browser.php from the Horde Project.
